# athena

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  sitemap.xml
athena-cli/: Cargo.toml  (+2 more)
athena-core/: Cargo.toml  README.md
athena-core/gui_build/: index.html
athena-core/src/: lib.rs
athena-core/src/files_management/: create_spec.rs  mod.rs  read_spec.rs  validate_spec.rs  write_spec.rs
athena-core/src/generator/: mod.rs
athena-core/src/models/: mod.rs
athena-core/src/models/constants/: country_codes.rs  hash_algorithms.rs  http_codes.rs  mod.rs
athena-core/src/models/spec/: mod.rs  spec.rs
athena-core/src/models/spec/validations/: api_description.rs  api_license.rs  api_name.rs  api_version.rs  bool_field.rs  bytes_field.rs  date_field.rs  enum_field.rs  mod.rs  number_field.rs  string_field.rs
athena-core/src/parser/: mod.rs  parser.rs
athena-core/src/server/: create_file.rs  get_file.rs  mod.rs  update_file.rs  validate_file.rs
athena-gui/: Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
athena-gui/assets/: style.scss
athena-gui/src/: App.css  App.tsx  lib.rs  main.rs
athena-gui/src/app/: home.rs  mod.rs
athena-gui/src/components/APIEnums/: APIEnum.tsx  APIEnumForm.tsx  APIEnums.tsx  index.ts
athena-gui/src/components/APIErrors/: APIErrors.tsx  index.ts
athena-gui/src/components/APIGlobals/: APIGlobalErrors.tsx  APIGlobals.tsx  index.ts
athena-gui/src/components/APIHeaders/: APIHeaders.tsx  index.ts
athena-gui/src/components/APIInfos/: APIInfos.tsx  APIInfosForm.tsx  index.ts
athena-gui/src/components/APIMethods/: APIMethod.tsx  APIMethodAddFieldValidation.tsx  APIMethodBoolDefault.tsx  APIMethodEnumDefault.tsx  APIMethodEnumSelect.tsx  APIMethodFields.tsx  APIMethods.tsx  index.ts  validations.ts
athena-gui/src/components/APIServices/: APIServices.tsx  index.ts
athena-gui/src/components/APIServices/APIService/: APIService.tsx  APIServiceForm.tsx
athena-gui/src/components/AppLayout/: AppLayout.tsx
athena-gui/src/components/SideNav/: SideNav.tsx
athena-gui/src/datalayer/: addService.ts  loadSpec.ts  methodFields.ts  service.ts  serviceEnums.ts  serviceMethods.ts  updateService.ts  updateSpec.ts
athena-gui/src/features/: actaKeys.ts  mod.rs
athena-gui/src/models/: spec.ts
athena-gui/src/models/constants/: country_codes.ts  hash_algorithms.ts  http_codes.ts
athena-gui/src/models/methodFields/: baseField.ts  bool_field.ts  bytes_field.ts  date_field.ts  enum_field.ts  number_field.ts  string_field.ts
athena-gui/src/utils/: mod.rs
athena-gui/tests/: web.rs
(+12 files in other folders)
