[package]
edition = "2021"
name = "athena-core"
version = "0.1.0"

[dependencies]
axum = "0.7.5"
regex = "1.10.4"
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
serde_regex = "1.1.0"
tokio = {version = "1.37.0", features = ["full"]}
tower-http = {version = "0.5.2", features = ["fs", "cors"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
