[package]
edition = "2021"
name = "athena-gui"
version = "0.1.0"

[dependencies]
athena-core = {path = "../athena-core"}
log = "0.4"
reqwest = {version = "0.12.3", features = ["json"]}
serde = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew = {git = "https://github.com/yewstack/yew/", features = ["csr"]}
yew-hooks = "0.3"
yew-router = "0.18"

[dev-dependencies]
gloo-utils = "0.2"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
features = ["Document", "Element", "HtmlCollection"]
version = "0.3"
