[package]
description = "My awesome Yew app."
edition = "2021"
name = "athena-gui"
readme = "./README.md"
version = "0.1.0"

[dependencies]
log = "0.4"
reqwest = {version = "0.11", features = ["json"]}
serde = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew = {version = "0.21", features = ["csr"]}
yew-hooks = "0.3"
yew-router = "0.18"

[dev-dependencies]
gloo-utils = "0.2"
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
features = ["Document", "Element", "HtmlCollection"]
version = "0.3"
