[package]
description = "My awesome Yew app."
edition = "2021"
name = "athena-gui"
readme = "./README.md"
version = "0.1.0"

[dependencies]
athena-core = {path = "../athena-core"}
browser-panic-hook = "0.2"
chrono = {version = "0.4.30", default-features = false, features = ["wasmbind"]}
gloo-console = "0.3.0"
gloo-utils = "0.2"
log = "0.4"
patternfly-yew = {version = "0.6.0-alpha.2", features = ["tree", "icons-fab"]}
popper-rs = {version = "0.3.2", features = ["yew", "debug"]}
reqwest = {version = "0.12.3", features = ["json"]}
serde = "1"
serde_json = "1"
strum = {version = "0.26", features = ["derive"]}
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3.69"
yew = {version = "0.21", features = ["csr"]}
yew-hooks = "0.3"
yew-more-hooks = {version = "0.3.3", features = ["yew-hooks"]}
yew-nested-router = "0.7.0"
yew-router = "0.18"
yewdux = "0.10.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies.web-sys]
features = ["Document", "Element", "HtmlCollection"]
version = "0.3"
